5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1795_1600.log
== SUBMITION (2019-05-30 17:06:39) 
-- CODE:
import from numpy *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
while(i<size(comprasI))
	if(comprasI[i]>80):
		comprasI[i] = (comprasI[i] * desc) + comprasI[i]
	total=total + comprasI[i]
print(round(total,2))
-- EXECUTION TIME:
0.259897
-- ERROR:
  File "/home/codebench/codes/1795/1600/main.py", line 1
    import from numpy *
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:06:42) 
-- CODE:
import from numpy *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
while(i<size(comprasI))
	if(comprasI[i]>80):
		comprasI[i] = (comprasI[i] * desc) + comprasI[i]
	total=total + comprasI[i]
print(round(total,2))
-- ERROR:
File "XXXX", line 1
    import from numpy *
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:06:55) 
-- CODE:
import * from numpy 
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
while(i<size(comprasI))
	if(comprasI[i]>80):
		comprasI[i] = (comprasI[i] * desc) + comprasI[i]
	total=total + comprasI[i]
print(round(total,2))
-- EXECUTION TIME:
0.149713
-- ERROR:
  File "/home/codebench/codes/1795/1600/main.py", line 1
    import * from numpy 
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:06:57) 
-- CODE:
import * from numpy 
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
while(i<size(comprasI))
	if(comprasI[i]>80):
		comprasI[i] = (comprasI[i] * desc) + comprasI[i]
	total=total + comprasI[i]
print(round(total,2))
-- ERROR:
File "XXXX", line 1
    import * from numpy 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:07:11) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
while(i<size(comprasI))
	if(comprasI[i]>80):
		comprasI[i] = (comprasI[i] * desc) + comprasI[i]
	total=total + comprasI[i]
print(round(total,2))
-- EXECUTION TIME:
0.171441
-- ERROR:
  File "/home/codebench/codes/1795/1600/main.py", line 6
    while(i<size(comprasI))
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:07:14) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
while(i<size(comprasI))
	if(comprasI[i]>80):
		comprasI[i] = (comprasI[i] * desc) + comprasI[i]
	total=total + comprasI[i]
print(round(total,2))
-- ERROR:
File "XXXX", line 6
    while(i<size(comprasI))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:07:40) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		comprasI[i] = (comprasI[i] * desc) + comprasI[i]
	total=total + comprasI[i]
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:09:40) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = (aux * desc) + aux
		comprasI[i] = aux
	total=total comprasI[i]
print(round(total,2))
-- EXECUTION TIME:
0.470565
-- ERROR:
  File "/home/codebench/codes/1795/1600/main.py", line 12
    total=total comprasI[i]
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:09:42) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = (aux * desc) + aux
		comprasI[i] = aux
	total=total comprasI[i]
print(round(total,2))
-- ERROR:
File "XXXX", line 12
    total=total comprasI[i]
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:09:54) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = (aux * desc) + aux
		comprasI[i] = aux
	total=total + comprasI[i]
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:09:58) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = (aux * desc) + aux
		comprasI[i] = aux
	total=total + comprasI[i]
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:11:42) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array((input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = (aux * desc) + aux
		comprasI[i] = aux
	total=total + comprasI[i]
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:11:46) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array((input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = (aux * desc) + aux
		comprasI[i] = aux
	total=total + comprasI[i]
print(round(total,2))
-- EXECUTION TIME:
2.96251
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1600/main.py", line 8, in <module>
    if(comprasI[i]>80):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:12:06) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = (aux * desc) + aux
		comprasI[i] = aux
	total=total + comprasI[i]
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:13:18) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = (aux * desc) + aux
		print(aux)
		
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:14:33) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		(aux * desc) + comprasI[i]
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:14:42) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		(aux * desc) + comprasI[i]
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- EXECUTION TIME:
4.24184
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:15:05) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		(aux * desc) + comprasI[i]
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:15:19) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		(aux * desc) + comprasI[i]
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- EXECUTION TIME:
4.26833
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:15:19) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		(aux * desc) + comprasI[i]
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:15:20) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		(aux * desc) + comprasI[i]
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- EXECUTION TIME:
5.49974
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:15:26) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		(aux * desc) + comprasI[i]
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:15:50) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		(aux * desc) - comprasI[i]
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:15:55) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		(aux * desc) - comprasI[i]
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- EXECUTION TIME:
2.32649
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:16:53) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = (aux * desc) - aux
		comprasI[i]=aux
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:16:58) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = (aux * desc) - aux
		comprasI[i]=aux
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- EXECUTION TIME:
2.6053
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:17:09) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = (aux * desc) - aux
		comprasI[i]=aux
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:17:47) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = (aux * desc) - aux
		comprasI[i]=aux
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:18:48) 
-- CODE:
from numpy import *
comprasI = array(eval(input()))
desc = 0.15
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = aux - (aux * desc)
		comprasI[i]=aux
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:18:54) 
-- CODE:
from numpy import *
comprasI = array(eval(input()))
desc = 0.15
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = aux - (aux * desc)
		comprasI[i]=aux
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- EXECUTION TIME:
2.99377
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:33:10) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		comprasI[i] = (comprasI[i] * desc) + comprasI[i]
	total=total + comprasI[i]
print(round(total,2))
-- EXECUTION TIME:
1524.26
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:36:07) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = (aux * desc) + aux
		comprasI[i] = aux
	total=total + comprasI[i]
print(round(total,2))
-- EXECUTION TIME:
1623.21
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:38:06) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = (aux * desc) + aux
		comprasI[i] = aux
	total=total + comprasI[i]
print(round(total,2))
-- EXECUTION TIME:
1685.33
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:41:05) 
-- CODE:
from numpy import *
desc=0.15
comprasI = array(eval(input()))
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = (aux * desc) + aux
		print(aux)
		
print(round(total,2))
-- EXECUTION TIME:
1642.24
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:47:05) 
-- CODE:
from numpy import *
comprasI = array(eval(input()))
desc = 0.15
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = aux - (aux * desc)
		comprasI[i]=aux
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:47:11) 
-- CODE:
from numpy import *
comprasI = array(eval(input()))
desc = 0.15
i = 0
total = 0
aux = 0
while(i<size(comprasI)):
	if(comprasI[i]>80):
		aux = comprasI[i] 
		aux = aux - (aux * desc)
		comprasI[i]=aux
	total=total + comprasI[i]
	i=i+1
print(round(total,2))
-- EXECUTION TIME:
4.31632
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
